[tool.poetry]
name = "python-tricks"
version = "0.1.0"
description = ""
authors = ["kofi-teddy"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
python-dotenv = "^0.19.0"
ipykernel = "^6.3.1"
pandas = "^1.3.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
